tests/verify/fail/assert-bool.rs
// error-pattern: error

extern crate prusti_contracts;

fn foo(x: bool) {
    assert!(x);
}

fn main() {

}
